#1302 - Test fix.